# mortal

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: attribute_test.rs  color.rs  debug_windows.rs  input.rs  macros_screen.rs  macros_term.rs  raw_input.rs  screen.rs  screen_test.rs  screen_threads.rs  signals.rs  style.rs  terminal.rs  threads.rs  true_color.rs  unix_open.rs
src/: buffer.rs  lib.rs  macros.rs  priv_util.rs  screen.rs  sequence.rs  signal.rs  terminal.rs  util.rs
src/unix/: ext.rs  screen.rs  terminal.rs
src/wasm32/: mod.rs  screen.rs  terminal.rs
src/windows/: ext.rs  mod.rs  screen.rs  terminal.rs
