[package]
name = "mortal"
version = "0.2.0"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Cross-platform terminal interface"

documentation = "https://docs.rs/mortal/"
homepage = "https://github.com/murarth/mortal"
repository = "https://github.com/murarth/mortal"

categories = ["command-line-interface"]
keywords = ["cli", "console", "screen", "term", "terminal"]
license = "MIT/Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "murarth/mortal" }

[dependencies]
bitflags = "1.0"
smallstr = "0.1"
unicode-normalization = "0.1"
unicode-width = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.13"
terminfo = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi", "handleapi", "minwindef", "ntdef", "processenv", "synchapi",
    "winbase", "wincon", "winerror", "winnt", "winuser" ] }

[dev-dependencies]
rand = "0.6"
