[package]
name = "mortal"
version = "0.2.4"
authors = ["Murarth <murarth@gmail.com>"]
edition = "2018"

description = "Cross-platform terminal interface"

documentation = "https://docs.rs/mortal/"
homepage = "https://github.com/murarth/mortal"
repository = "https://github.com/murarth/mortal"

categories = ["command-line-interface"]
keywords = ["cli", "console", "screen", "term", "terminal"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
bitflags = "2.0"
smallstr = "0.2"
unicode-normalization = "0.1"
unicode-width = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["poll", "signal", "term"] }
terminfo = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi", "handleapi", "minwindef", "ntdef", "processenv", "synchapi",
    "winbase", "wincon", "winerror", "winnt", "winuser" ] }

[dev-dependencies]
rand = "0.8"
